{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 90,
  "lineage": "bea12260-273e-129b-0f43-96b7c8fe3e82",
  "resources": [
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u",
            "location": "eastus2",
            "name": "nsg-iap-hai02u",
            "resource_group_name": "rg-iap-hai02u",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "12000",
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "allow_management_outbound",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1438",
                  "1440",
                  "1452",
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "allow_management_inbound",
                "priority": 106,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_health_probe_inbound",
                "priority": 300,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow_misubnet_outbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_tds_inbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow Azure Load Balancer inbound traffic",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-healthprobe-in-10-50-160-128-25-v10",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI Supportability through Corpnet ranges",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corppublic-in-10-50-160-128-25-v10",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI Supportability",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1440",
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-corpsaw-in-10-50-160-128-25-v10",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI internal inbound traffic",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-in-10-50-160-128-25-v10",
                "priority": 104,
                "protocol": "*",
                "source_address_prefix": "10.50.160.128/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI internal outbound traffic",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-internal-out-10-50-160-128-25-v10",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "10.50.160.128/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI provisioning Control Plane Deployment and Authentication Service",
                "destination_address_prefix": "10.50.160.128/25",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1438",
                  "1440",
                  "1452",
                  "9000",
                  "9003"
                ],
                "direction": "Inbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-sqlmgmt-in-10-50-160-128-25-v10",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "SqlManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow MI services outbound traffic over https",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "12000",
                  "443"
                ],
                "direction": "Outbound",
                "name": "Microsoft.Sql-managedInstances_UseOnly_mi-services-out-10-50-160-128-25-v10",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.50.160.128/25",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny_all_inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny_all_outbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_health_probe_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/allow_health_probe_inbound",
            "name": "allow_health_probe_inbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_management_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "1438",
              "1440",
              "1452",
              "9000",
              "9003"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/allow_management_inbound",
            "name": "allow_management_inbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 106,
            "protocol": "Tcp",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_management_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "12000",
              "443",
              "80"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/allow_management_outbound",
            "name": "allow_management_outbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_misubnet_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/allow_misubnet_outbound",
            "name": "allow_misubnet_outbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_tds_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/allow_tds_inbound",
            "name": "allow_tds_inbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/deny_all_inbound",
            "name": "deny_all_inbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u/securityRules/deny_all_outbound",
            "name": "deny_all_outbound",
            "network_security_group_name": "nsg-iap-hai02u",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "rg-iap-hai02u",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/routeTables/rt-iap-hai02u",
            "location": "eastus2",
            "name": "rt-iap-hai02u",
            "resource_group_name": "rg-iap-hai02u",
            "route": [],
            "subnets": [
              "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_subnet.subnet_3",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.160.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/FrontEnd",
            "name": "FrontEnd",
            "resource_group_name": "rg-iap-hai02u",
            "virtual_network_name": "vnet-iap-hai02u"
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.160.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/BackEnd",
            "name": "BackEnd",
            "resource_group_name": "rg-iap-hai02u",
            "virtual_network_name": "vnet-iap-hai02u"
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.161.0/25"
            ],
            "delegation": [
              {
                "name": "managedinstancedelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Sql/managedInstances"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration",
            "name": "VnetIntegration",
            "resource_group_name": "rg-iap-hai02u",
            "virtual_network_name": "vnet-iap-hai02u"
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration",
            "network_security_group_id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u",
            "subnet_id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration"
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_network_security_group.nsg",
            "module.iap_vnet.azurerm_subnet.subnet_3",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration",
            "route_table_id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/routeTables/rt-iap-hai02u",
            "subnet_id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration"
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.azurerm_route_table.rt",
            "module.iap_vnet.azurerm_subnet.subnet_3",
            "module.iap_vnet.azurerm_virtual_network.vnet",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.iap_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.160.0/23"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c823d3e4-5ea6-4abd-a439-58e6f58ce380",
            "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u",
            "location": "eastus2",
            "name": "vnet-iap-hai02u",
            "resource_group_name": "rg-iap-hai02u",
            "subnet": [
              {
                "address_prefix": "10.50.160.0/25",
                "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/FrontEnd",
                "name": "FrontEnd"
              },
              {
                "address_prefix": "10.50.161.0/25",
                "id": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/virtualNetworks/vnet-iap-hai02u/subnets/VnetIntegration",
                "name": "VnetIntegration",
                "security_group": "/subscriptions/f7d221ec-4738-488a-8a1c-bd6241699022/resourceGroups/rg-iap-hai02u/providers/Microsoft.Network/networkSecurityGroups/nsg-iap-hai02u"
              }
            ],
            "tags": {
              "Application": "iap",
              "Environment": "UAT"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.iap_rg",
            "module.iap_vnet.data.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}